some change, add text,change icon

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Mind Abyss
-subtitle: Which Thought Beyonds Any
+subtitle: Thought Beyonds Any
 description:
 author: L.C. Xu
 language: zh-CN
